stop the page titles hiding behind the menu bar and explicitly style the controls cells

--- a/DDDEastAnglia/Areas/Admin/Content/admin.css
+++ b/DDDEastAnglia/Areas/Admin/Content/admin.css
@@ -1,4 +1,8 @@
-﻿a { text-decoration: underline; }
+﻿body {
+    padding-top: 50px;
+}
+
+a { text-decoration: underline; }
 
 a.btn, .dropdown-menu a, a.brand { text-decoration: none; }
 
@@ -22,7 +26,7 @@ a.btn, .dropdown-menu a, a.brand { text-decoration: none; }
     content: "\f0de";
 }
 
-.table td:last-child {
+.table td.controls {
     text-align: right;
 }
 
